changed scroll to auto to prevent double scroll bar

--- a/content.css
+++ b/content.css
@@ -1,3 +1,3 @@
 body, html {
-    overflow-y: scroll !important;
+    overflow-y: auto !important;
 }
